# ndict

./: AGENTS.md  Cargo.toml  TESTING_PLAN.md  config.example.toml  install.sh  justfile  setup_tests.sh
cli/: Cargo.toml
cli/src/: client.rs  main.rs
daemon/: Cargo.toml
daemon/src/: AGENTS.md  config.rs  config.rs.bak  lib.rs  main.rs  rate_limit.rs  server.rs  state.rs
daemon/src/audio/: capture.rs
daemon/src/output/: keyboard.rs  mod.rs
daemon/src/trans/: engine.rs  mod.rs
daemon/src/transcription/: engine.rs  llm.rs  mod.rs  streaming_engine.rs  streaming_wrapper.rs
daemon/src/vad/: detector.rs  mod.rs  speech_detector.rs
daemon/tests/: audio_integration.rs  keyboard_integration.rs  vad_integration.rs
daemon/tests/common/: mod.rs
shared/: Cargo.toml
shared/src/: AGENTS.md  ipc.rs
systemd/: ndictd.service
waybar/: ndict-ironbar  ndict-waybar
