[package]
name = "ndict"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
shared = { path = "../shared" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio-test = "0.4"
