[package]
name = "ndictd"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
shared = { path = "../shared" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive = "1.0"
toml = "0.8"
cpal = "0.15"
whisper-rs = "0.13"
enigo = { version = "0.3.0", default-features = false, features = ["wayland"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
