[package]
name = "ndictd"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
shared = { path = "../shared" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive = "1.0"
toml = "0.8"
regex = "1.10"
cpal = "0.15"
whisper-rs = { version = "0.15.1", features = ["hipblas"] }
wrtype = "0.1"
dirs = "5.0"
reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
