[package]
name = "ndictd"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]

[[bin]]
name = "ndictd"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive = "1.0"
toml = "0.8"
regex = "1.10"
cpal = "0.15"
whisper-rs = { version = "0.15.1", features = ["hipblas"] }
wrtype = "0.1"
dirs = "5.0"
reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
serial_test = "3.1"
